Don't try to call into BIOS32 handlers outside the normal ROM address range.  They may have been trashed earlier in the boot process, or the directory header may simply be bogus.

PR:		5140
Submitted by:	Joel Faedi <Joel.Faedi@esial.u-nancy.fr>
Brought-to-attention-by: Derek Inksetter <derek@saidev.com>, bde